--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "carousel-exercises": "file:",
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "file-saver": "^2.0.5",
-    "framer-motion": "^10.13.0",
+    "motion": "^12.0.11",
     "next": "^13.4.12",
     "node-vibrant": "^3.2.1-alpha.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.6",
-    "swiper": "^10.0.4",
+    "swiper": "^11.2.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
