--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "file-saver": "^2.0.5",
+    "include-media": "^2.0.0",
     "motion": "^12.0.11",
     "next": "^13.4.12",
     "node-vibrant": "^3.2.1-alpha.1",
