--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,5 @@ yarn-error.log*
 next-env.d.ts
 
 # images
-/public/images/*
-!/public/images/placeholder.jpg
+# /public/images/*
+# !/public/images/placeholder.jpg
